Stop play game text from wrapping

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ ul {
 a, .play a {
     color: white;
     cursor: url(./images/cursor.cur), auto;
+    white-space: nowrap;
 }
 
 .about-container img {
